app/css/app.css
* {
  -webkit-box-sizing: border-box;
}

body {
  font-family: "Helvetica Neue", Helvetica, Arial, "Open Sans", sans-serif;
  font-size: 13px;
  line-height: 18px;
  overflow: hidden;
}

a {
  text-decoration: none;
  -webkit-user-drag: none;
}

img {
  -webkit-user-drag: none;
}

#window-container {
  -webkit-box-align: stretch;
  -webkit-box-orient: horizontal;
  display: -webkit-box;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  -webkit-user-select: none;
}

#sidebar {
  background-color: #333;
  -webkit-box-shadow: inset -6px 0 7px rgba(0,0,0,0.5);
  color: #EBEBEB;
  overflow: hidden;
  -webkit-transition: width 0.2s ease-in-out;
  width: 0;
}

#sidebar *:active {
  cursor: default;
}

body.sidebar-open #sidebar {
  width: 220px;
  overflow-y: hidden;
}

#sidebar h1 {
  -webkit-app-region: drag;
  cursor: default;
  font-size: 21px;
  font-weight: normal;
  padding: 20px 24px 14px 24px;
  -webkit-user-select: none;
}

#sidebar hr {
  height: 1px;
  border: none;
  background-color: rgba(0,0,0,0.16);
}

#sidebar ul {
  padding: 0;
  font-size: 140%;
  list-style-type: none;
}

#sidebar li {
  margin: 0px;
  padding: 10px 0px 10px 24px;
  -webkit-user-select: none;
  white-space: nowrap;
}

#sidebar li:hover {
  background-color: #3A3A3A;
  color: #FFF;
}

#file-menu {
  margin: 24px 0;
}

#tabs-list {
  margin: 24px 0 24px 0;
}

#tabs-list li {
  -webkit-box-flex: 1.0;
  -webkit-box-orient: horizontal;
  display: -webkit-box;
}

#tabs-list li.active {
  border-left: 10px solid #DDD;
  padding-left: 14px;
}

#tabs-list li .filename {
  -webkit-flex: 1.0;
  width: 170px;
  overflow: hidden;
  text-overflow: ellipsis;
}

#tabs-list li.unsaved .filename:after {
  content: " *";
}

#tabs-list li .close {
  background-position: center center;
  background-repeat: no-repeat;
  height: 20px;
  width: 20px;
}


#tabs-list li:hover .close {
  background-image: url('../images/close-tab.svg');
  opacity: 0.3;
}

#tabs-list li .close:hover {
  opacity: 1;
}

#main-container {
  -webkit-box-align: stretch;
  -webkit-box-flex: 1;
  -webkit-box-orient: vertical;
  display: -webkit-box;
}

header {
  -webkit-app-region: drag;
  background-color: #F5F5F5;
  border-bottom: 1px solid #888;
  -webkit-box-align: center;
  -webkit-box-orient: horizontal;
  -webkit-box-pack: center;
  display: -webkit-box;
  height: 60px;
  padding-left: 10px;
  position: relative;
  text-align: center;
  -webkit-user-select: none;
}

header * {
  -webkit-user-select: none;
}

.icon-button {
  -webkit-app-region: no-drag;
  background-position: center center;
  background-repeat: no-repeat;
  border: 1px solid transparent;
  border-radius: 3px;
  cursor: pointer;
  height: 40px;
  margin: 0 10px;
  opacity: 0.65;
  width: 40px;
}

.icon-button:hover, .icon-button:active, .icon-button.selected {
  border: 1px solid rgba(0,0,0,0.16);
  color: #333;
  opacity: 0.8;
}

#toggle-sidebar {
  background-image: url('../images/menu.svg');
}

.sidebar-open #toggle-sidebar {
  border: 1px solid rgba(0,0,0,0.16);
  color: #333;
  opacity: 0.8;
}

#search-button {
    background-image: url('../images/search.svg');
    -webkit-transition: opacity 200ms linear;
}

header.search-active #search-button {
  opacity: 0;
  pointer-events: none;
}

#search-button:hover {
  color: #666;
}

#search-button.hidden {
  display: none;
}

#search-input {
  -webkit-app-region: no-drag;
  border: 1px solid #DDD;
  border-radius: 2px;
  font-size: 14px;
  height: 30px;
  opacity: 0;
  padding: 5px 8px;
  position: absolute;
  top: 15px;
  left: 70px;
  visibility: hidden;
  -webkit-transition: all 200ms ease-in-out;
  -webkit-user-select: auto;
  width: 0;
}

header.search-active #search-input {
  visibility: visible;
  opacity: 1;
  width: 220px;
}

#title-filename {
  -webkit-box-flex: 1;
  color: #777;
  font-size: 21px;
  font-weight: bold;
  line-height: 26px;
  max-width: 100%;
  overflow: hidden;
  text-align: center;
  text-overflow: ellipsis;
  -webkit-transition: all 200ms ease-in-out;
  -webkit-user-select: auto;
  white-space: nowrap;
}

#title-filename.unsaved:after {
  content: " *";
}

header.search-active #title-filename {
  opacity: 0;
  visibility: hidden;
}

#window-maximize {
  background-image: url('../images/maximize.svg');
}

#window-close {
  background-image: url('../images/close.svg');
}

#editor {
  -webkit-box-flex: 1.0;
  position: relative;
}


/* Markup below overrides default search input box styling. */
input[type=search] {
  -webkit-appearance:none;
}

input[type=search]:focus {
  border: 1px solid #15C;
  outline: none;
}

::-webkit-search-decoration,
::-webkit-search-results-button,
::-webkit-search-results-decoration {
  display: none;
}

::-webkit-search-cancel-button {
  -webkit-appearance: none;
  background-image: url('../images/close.svg');
  height: 20px;
  opacity: 0.5;
  width: 20px;
}

/* Dialog */
#dialog-container {
  display: none;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 4;
  -webkit-box-align: center;
  -webkit-box-pack: center;
}

#dialog-container.open {
  display: -webkit-box;
}

.dialog-window {
  background-color: #F5F5F5;
  border: 1px solid #DDD;
  box-shadow: 0px 0px 100px #888888;
  display: -webkit-box;
  max-width: 50%;
  opacity: 1.0;
  -webkit-box-align: center;
  -webkit-box-orient: vertical;
  -webkit-box-pack: center;
}

.dialog-text {
  display: -webkit-box;
  font-size: 15px;
  padding: 20px 20px 10px 20px;
}

.dialog-buttons {
  display: -webkit-box;
  -webkit-box-align: center;
  -webkit-box-orient: horizontal;
  -webkit-box-pack: center;
}

.dialog-button {
  border: 1px solid rgba(0,0,0,0.16);
  border-radius: 3px;
  -webkit-box-align: center;
  -webkit-box-orient: horizontal;
  -webkit-box-pack: center;
  color: #333;
  display: -webkit-box;
  height: 40px;
  margin: 10px;
  opacity: 0.8;
  padding: 0 10px 0 10px;
}

.dialog-button:hover {
  border: 1px solid rgba(0,0,0,0.32);
  color: #000;
}

